Main/css/style.css
body, html {
    margin: 0px;
    background-color: #282c39;
    height:100%;
    font-family: "Roboto","Franklin Gothic Medium",Tahoma,sans-serif;
}

.h-20 {
    height: 20% !important;
}

.bg-header {
    background-color: white;
}

.bg-secondary-header {
    background-color: #c00;
    font-size: 14px;
}

.bg-dark-custom {
    background-color: #282c39;
}

.tab-menu {
    background-color: #555;
    font-family: "Roboto","Franklin Gothic Medium",Tahoma,sans-serif;
    font-size: 14px;
    display: table;
    width: 100%;
    box-sizing:border-box;
    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
}

.main {
    background-color: white;
}

.tab {
    display: table-cell;
}

.tab:hover {
    background-color: #c00;
}

.tab > a {
    color: white;
}

.navbar-brand {
    padding: 0px;
    margin: 0px;
}

#active {
    /* border-bottom: 3px solid rgb (204,0,0); */
    background-color: 3px solid rgb (204,0,0);
}

.img-responsive {
    height: auto;
    width: auto;
    max-height: 30px;
    max-width: 250px;
}

.main-nav {
    display:flex;
    background-color: white;
}

.main-nav li {
    list-style: none;
}

.main-nav li:hover {
    border-top: 5px solid rgb(204,0,0);
    /* background-color: rgb(204,0,0); */
}

.main-nav li .active:hover {
    border-top: 1px solid white(204,0,0);
}

.main-nav li:first-child {
    margin-right: auto;
}

.main-nav li a {
    color: black;
    border-radius: 4px;
    display: block;
    padding: 15px 30px;
    text-decoration: none;
    font-weight: 300;
    text-transform: uppercase;
}

.active { /*Whichever html page the user is currently on the navbar will appear this color*/
    border-bottom: 3px solid rgb(204,0,0);
}

.logo {
    margin-right: auto;

}

.img-responsive {
    height: auto;
    width: auto;
    max-height: 30px;
    max-width: 250px;
}

.col-md-3-5 {
    width: 29.16666667%;
}

.btn-settings {
    color: white;
    background-color: #c00;
}

